09 Jan 2000

- Rewrote some documentation to reflect new GD::Text behaviour.

08 Jan 2000

- Rewrote set method to only accept documented attributes.
- Made sure all documented attributes are part of the %Defaults hashes.
- Changed inheritance slightly, because changing the set method and
  using access to file scoped variables didn't work very well with
  multiple inheritance in mixed and linespoints. All file scoped
  material now is kept in the common ancestor of these, i.e. axestype.

06 Jan 2000

- Added shadow patch from Jeremy Wadsack, changed a few things: Allow
  negative shadows, move his code out a bit more.
- Added color cycling patch from Jeremy. Adapted it to new code, and
  added code to also allow cycling of colour of bar borders.
- Documentation.

05 Jan 2000

- removed all references to perl version from any code. Leaving it up to
  users to find out for themselves. They'll just need to read the
  documentation.
- Applied patch from Jeremy Wadsack fixing text sticking out of pie
  slices causing fills to fail.
- cleanup of code in pie.pm: draw_data, filling front of pie, and
  _get_pie_front_coords.

03 Jan 2000

- Fixed two_axes and negative values
- released 1.22

Dec 1999, mgjv

- Development and support back to me, mgjv. GIFgraph and Chart::PNGgraph
  (hopefully) will both become wrappers around this new set of modules.

- Renamed to GD::Graph
- Removed direct font handling stuff, and moved font handling to
  GD::Text::Align objects
- Removed methods for writing to files directly. it is now up to the
  user of the module to save the image to a file. GIFgraph and
  Chart::PNGgraph will still do this
- plot method now returns a reference to a gd object, no longer the
  image data. GIFgraph and Chart::PNGgraph still exhibit old beahviour.
- Added some new options, and split up some others. 
- Added new methods, mainly to detect the useability level of the
  current GD.
- Changed any die and warn statements to croak and carp
